API: Add createSubproject endpoint
